Cacti CHANGELOG

SVN
-bug#0001504: no newline fix
-bug#0001568: Cacti currently gives a lot of warnings of deprecated functions on PHP 5.3
-bug#0001632: script server treats quoted arguments with spaces as multiple separate arguments
-bug#0001768: perform consistency check on ds maximum vs. ds minimum
-bug#0001783: Graph Export: The ExportDate is wrong -> we will print current time and number of graphs, then
-bug#0001815: 1-minute with 5-minute crontab broken
-bug#0001816: Cannot export graph data to CSV with IE 8 (8.0.7600.16385) 
-bug#0001885: ping.pl does not account for ping using icmp_req rather than icmp_seq in some versions of ping 
-bug#0001880: When Performing Form Validation Error Message Areas Not Highlighted Upon Form Save
-bug#0001903: Undefined variable: mode in lib/ldap.php on line 375 
-bug: accept "Connection refused" on TCP ping tests
-bug: add missing row selection to graph preview
-bug: script server throws "undefined variable" error when in debug mode
-bug: Removing graphs was not taking advantage of bulk deletes causing major slowdowns
-bug: Add some command escaping
-bug: Change default font sizes
-bug: when using template and search filter on graph management, sql error occurs
-feature#0001922: Reindex method "Index Count Changed" requires that OID_NUM_INDEXES is given for SNMP Data Queries
-feature#0001923: Implement counting for script (server) data queries just like OID_NUM_INDEXES
-feature#0001924: Allow for reindex method "Index Count Changed" to apply to script (server) queries as well

0.8.7g
-bug: RRDTool 1.4.x not recognized during installation
-bug: Implement windows-aware shell escaping
-bug: Fixed multiple cross site scripting vulnerabilities reported by Tomas Hoger of the Red Hat Security Response Team
-bug#0001292: Over 8TByte Partition in Windows cant get correct data from snmp 
-bug#0001486: Unable to login after redirection to access denied page