@@ -68,6 +68,7 @@ NOTE: Someone remove duplication between 0.8.7f and 0.8.8
 -bug#0001623: SQL JOIN on user_log without INDEX (performance issue)
 -bug#0001632: script server treats quoted arguments with spaces as multiple separate arguments
 -bug#0001633: PA: new hook in graph.php 
+-bug#0001678: Adding graphs to a device fails to add entries to poller_item if using the script server 
 -bug#0001746: SNMP Hex-String matching 
 -bug#0001772: Script Server is not honouring reindex method "Index Count Changed" and "Verify All Fields" 
 -bug#0001776: Cacti Support for Multiple Simultaneous Databases Broken
