@@ -4,6 +4,7 @@ SVN
 -bug#0001504: no newline fix
 -bug#0001568: Cacti currently gives a lot of warnings of deprecated functions on PHP 5.3
 -bug#0001632: script server treats quoted arguments with spaces as multiple separate arguments
+-bug#0001678: Adding graphs to a device fails to add entries to poller_item if using the script server 
 -bug#0001768: perform consistency check on ds maximum vs. ds minimum
 -bug#0001783: Graph Export: The ExportDate is wrong -> we will print current time and number of graphs, then
 -bug#0001815: 1-minute with 5-minute crontab broken
